# AutoConnectRCC

./: .gitignore  README.md  build_macos.sh  build_windows.bat  pyproject.toml  requirements.txt  run_rcc.py
src/rcc/: __init__.py  config.py  discovery.py  license_client.py  license_decrypt.py  main.py  mqtt_client.py  provisioner.py  shelly_api.py  wifi_manager.py
src/rcc/assets/: RCC-logo.icns
src/rcc/ui/: __init__.py  ascii_art.py  console.py  theme.py
tools/: convert_icon.py
