[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcc"
version = "1.0.0"
description = "RemoteControlContactor - Shelly Device Provisioning Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Ryzeka"}
]
keywords = ["shelly", "mqtt", "iot", "provisioning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11", 
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "rich>=13.7.0",
    "requests>=2.31.0",
    "zeroconf>=0.131.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.3.0",
    "pytest>=7.4.0",
]

[project.scripts]
rcc = "rcc.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyinstaller]
name = "RCC"
onefile = true
console = true
icon = "assets/icon.ico"
